@@ -70,10 +70,8 @@ function apiWarning(str) {
 
 // === CommonStream ===
 // Common base for compress/decompress streams.
-function CommonStream() {
+function CommonStream(ctor, args) {
   events.EventEmitter.call(this);
-
-  this.impl_ = null;
 
   this.dataQueue_ = [];
   this.paused_ = false;
@@ -81,6 +79,9 @@ function CommonStream() {
   this.outputEncoding_ = null;
   this.readable = true;
   this.writeable = true;
+
+  this.impl_ = ctor.createInstance_.apply(
+      null, Array.prototype.slice.call(args, 0));
 }
 inherits(CommonStream, events.EventEmitter);
 
@@ -209,8 +210,8 @@ CommonStream.prototype.emitEvent_ = function(err, data, fin) {
 
 // === CompressStream ===
 // Common base for compression streams.
-function CompressStream() {
-  CommonStream.call(this);
+function CompressStream(ctor, args) {
+  CommonStream.call(this, ctor, args);
 }
 inherits(CompressStream, CommonStream);
 
@@ -224,8 +225,8 @@ CompressStream.prototype.setEncoding = function(enc) {
 
 // === DecompressStream ===
 // Common base for decompress streams.
-function DecompressStream() {
-  CommonStream.call(this);
+function DecompressStream(ctor, args) {
+  CommonStream.call(this, ctor, args);
 }
 inherits(DecompressStream, CommonStream);
 
@@ -237,36 +238,28 @@ DecompressStream.prototype.setEncoding = function(enc) {
 
 // === GzipStream ===
 function GzipStream() {
-  CompressStream.call(this);
-
-  this.impl_ = new Gzip();
+  CompressStream.call(this, Gzip, arguments);
 }
 inherits(GzipStream, CompressStream);
 
 
 // === GunzipStream ===
 function GunzipStream() {
-  DecompressStream.call(this);
-
-  this.impl_ = new Gunzip();
+  DecompressStream.call(this, Gunzip, arguments);
 }
 inherits(GunzipStream, DecompressStream);
 
 
 // === BzipStream ===
 function BzipStream() {
-  CompressStream.call(this);
-
-  this.impl_ = new Bzip();
+  CompressStream.call(this, Bzip, arguments);
 }
 inherits(BzipStream, CompressStream);
 
 
 // === BunzipStream ===
 function BunzipStream() {
-  DecompressStream.call(this);
-
-  this.impl_ = new Bunzip();
+  DecompressStream.call(this, Bunzip, arguments);
 }
 inherits(BunzipStream, DecompressStream);
 
