@@ -2,6 +2,7 @@
   * nodejs streaming API conformance improved.
   * Removed some limitations on input/output encoding of data.
   * Checked to work on node v0.1.102.
+  * Pass streams constructor arguments to implementation constructor.
 
 2010-06-20 v0.1.7
   * Integrated support for npm. Thanks to Tim-Smart.
